sezon-1/7-configmap/gitea-ingress.yaml
# apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: gitea
spec:
  defaultBackend:
    service:
      name: gitea
      port:
        number: 80
  rules:
  - host: gitea.192.168.99.100.nip.io
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: gitea
            port:
             number: 3000
